--- a/cbt.html
+++ b/cbt.html
@@ -13,20 +13,30 @@
       text-align: center;
       padding: 100px 20px;
     }
+
     header {
       background-color: rgba(20, 20, 20, 0.95);
       display: flex;
-      justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
       box-shadow: 0 0 10px gold;
       position: sticky;
       top: 0;
       z-index: 1000;
+      justify-content: space-between;
     }
+
+    .back-icon {
+      font-size: 1.4rem;
+      color: gold;
+      cursor: pointer;
+    }
+
     h1 {
-      font-size: 1.7rem;
+      font-size: 1.6rem;
+      margin: 0 auto;
     }
+
     .container {
       background: rgba(20, 20, 20, 0.8);
       padding: 30px;
@@ -35,6 +45,7 @@
       max-width: 500px;
       margin: auto;
     }
+
     button {
       padding: 15px 25px;
       font-size: 1rem;
@@ -45,10 +56,12 @@
       margin-top: 20px;
       cursor: pointer;
     }
+
     .disabled {
       background-color: gray;
       cursor: not-allowed;
     }
+
     .countdown {
       font-size: 1.2rem;
       margin-top: 15px;
@@ -57,17 +70,10 @@
 </head>
 <body>
   <header>
+    <i class="fas fa-arrow-left back-icon" onclick="window.location.href='home.html'" title="Go back"></i>
     <h1>FINANCE POINT</h1>
-    <i class="fas fa-sign-out-alt logout-icon" onclick="logoutUser()" title="Logout"></i>
+    <span></span> <!-- Filler to balance the flex layout -->
   </header>
-
-  <!-- Auto nav -->
-  <div id="top-nav-placeholder"></div>
-  <script>
-    fetch("nav.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("top-nav-placeholder").innerHTML = html);
-  </script>
 
   <div class="container">
     <h2>Start Your CBT Session</h2>
@@ -118,7 +124,7 @@
               remaining -= 1000;
               if (remaining <= 0) {
                 clearInterval(interval);
-                location.reload(); // Reload to enable start
+                location.reload();
               } else {
                 updateCountdown(remaining);
               }
@@ -141,12 +147,6 @@
 
     startBtn.onclick = () => {
       window.location.href = "cbt-practice.html";
-    };
-
-    window.logoutUser = function () {
-      signOut(auth)
-        .then(() => window.location.href = "login.html")
-        .catch((error) => alert("Logout failed: " + error.message));
     };
   </script>
 </body>
